logs/pysa.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Pysa-0.3b5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pysa'...
Compiling './lib/python3.5/site-packages/pysa/dependencies.py'...
***   File "./lib/python3.5/site-packages/pysa/dependencies.py", line 56
    exec "from %s.converter import SECTION_CALL_EQ"%module
                                                  ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/pysa/exception.py'...
***   File "./lib/python3.5/site-packages/pysa/exception.py", line 34
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pysa/filter'...
Compiling './lib/python3.5/site-packages/pysa/filter/parser.py'...
***   File "./lib/python3.5/site-packages/pysa/filter/parser.py", line 122
    raise ParserException, ("filter file error on section %s" % refname)
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pysa/preprocessing.py'...
***   File "./lib/python3.5/site-packages/pysa/preprocessing.py", line 38
    exec "from %s.objects import *"%module
                                  ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/pysa/puppet'...
Compiling './lib/python3.5/site-packages/pysa/puppet/build.py'...
***   File "./lib/python3.5/site-packages/pysa/puppet/build.py", line 62
    print "%s:\n%s\n\n" % (manifest_fname,
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pysa/salt'...
Compiling './lib/python3.5/site-packages/pysa/salt/build.py'...
***   File "./lib/python3.5/site-packages/pysa/salt/build.py", line 56
    print "%s:\n%s\n\n" % (manifest_fname,
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pysa/scanner'...
Listing './lib/python3.5/site-packages/pysa/scanner/actions'...
Compiling './lib/python3.5/site-packages/pysa/scanner/actions/sshkey.py'...
***   File "./lib/python3.5/site-packages/pysa/scanner/actions/sshkey.py", line 78
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pysa/scanner/actions/utils.py'...
***   File "./lib/python3.5/site-packages/pysa/scanner/actions/utils.py", line 158
    mode = oct( s.st_mode & 0777 )
                               ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/pysa/scanner/object'...
Compiling './lib/python3.5/site-packages/pysa/scanner/scanner_handler.py'...
***   File "./lib/python3.5/site-packages/pysa/scanner/scanner_handler.py", line 126
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
